app/rust/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@add_auto_renewed_validator.json.snap
---
source: src/parser/transactions.rs
assertion_line: 603
expression: reduced
input_file: src/parser/testvectors/add_auto_renewed_validator.json
---
[
    "AutoRenewedValid": "Transaction",
    "Transfer": "1 AVAX to ",
    "Address": "fuji1q5qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqv5jr3s",
    "Validator": "NodeID-Gs2aNxFXi6admjCa8vutk1Jse7BhbC9j",
    "Signer": "0xaf5e3229bbe7e2ad8459e9e3cf2a2dec1c2e68e6eca9022a31993d0be2da36a91d51a31efd6a1ba6cfb15edff31c7c3c",
    "Stake": "1 AVAX to ",
    "Address": "fuji1q5qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqv5jr3s",
    "Valida rewards to": "fuji1qcqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqwwm9s4",
    "Delega rewards to": "fuji1quqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqhlu8gk",
    "Owner address": "fuji1pqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq4jm9ac",
    "Delegate fee(%)": "2",
    "Stake weight": "1",
    "AutoCompound(%)": "50",
    "Period(seconds)": "604800",
    "Fee(AVAX)": "0",
]
