app/rust/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@c_export_to_x2.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/c_export_to_x2.json
---
[
    "Export Tx": "C to X Chain",
    "Amount": "0.001 AVAX to ",
    "Address": "local1vmusmdsn0fu0w6ekj0ml90zs09td4etrp5d6p7",
    "Fee": "0.001",
]
