app/rust/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@sample_fuji2.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/sample_fuji2.json
---
[
    "Transfer": "Transaction",
    "Transfer": "0.000001 AVAX to ",
    "Address": "fuji10an3cucdfqru984pnvv6y0rspvvclz634xwwhs",
    "Transfer": "0.006999 AVAX to ",
    "Address": "fuji179xfr036ym3uuv8ewrv8y4la97ealwmlfg8yrr",
    "Fee(AVAX)": "0.001",
]
